# b-jvm

./: .clang-format  .gitattributes  .gitignore  .lfsconfig  CMakeLists.txt  CMakePresets.json  DartConfiguration.tcl  LICENSE  README.md  natives_table.ld  script.d
natives/: CMakeLists.txt
natives/share/java/io/: Console.c  FileDescriptor.c  FileInputStream.c  FileOutputStream.c  ObjectStreamClass.c  RandomAccessFile.c  UnixFileSystem.c  fs.h  io-natives.h  posix-fs.c  posix-fs.h  unixlike-fs.c  unixlike-fs.h
natives/share/java/lang/: Class.c  ClassLoader.c  Double.c  Float.c  Module.c  NullPointerException.c  Object.c  ProcessEnvironment.c  Runtime.c  String.c  StringUTF16.c  System.c  Thread.c  Throwable.c
natives/share/java/lang/invoke/: MethodHandle.c  MethodHandleNatives.c
natives/share/java/lang/ref/: Finalizer.c
natives/share/java/security/: AccessController.c
natives/share/java/util/: TimeZone.c
natives/share/sun/misc/: URLClassPath.c  VM.c
test/: .gitignore  CMakeLists.txt  analysis-tests.cc  arrays-test.cc  async-test.cc  async-tests.cc  bench.py  benches.cc  classpath-tests.cc  natives-test.cc  parallel_runner.py  tests-common.cc  tests-common.h  tests.cc  wasm-tests.cc
test/test_files/advanced_lambda/: Main.java
test/test_files/arithmetic_exception/: Main.java
test/test_files/array_clinit/: Main.java
test/test_files/array_get_native/: ArrayGetNative.java
test/test_files/array_store/: ArrayStore.java
test/test_files/arraycopy/: Main.java
test/test_files/async_natives/: AsyncNative.java
test/test_files/autodiff/: .gitignore  Main.java  TaylorSeries.java  TaylorSeriesTest.java
test/test_files/bad_classloaders/: BadClassloaders.java
test/test_files/basic_classloader/: ExternalClass.java  URLClassLoaderExample.java
test/test_files/basic_lambda/: Main.java
test/test_files/basic_multithreading/: Multithreading.java
test/test_files/bench_big_decimal/: Main.java
test/test_files/bench_stack_trace/: Main.java
test/test_files/big_decimal/: Main.java
test/test_files/cfg_fuck/: Main.java  reference.txt
test/test_files/circularity/: Main.java
test/test_files/clone_not_supported/: CloneNotSupportedTest.java
test/test_files/compiler/: Main.java
test/test_files/concurrent_initialisation/: ConcurrentInitialization.java
test/test_files/conflicting_defaults/: ConflictingDefaults.java
test/test_files/constant_value/: Main.java
test/test_files/eiie/: Main.java
test/test_files/extended_npe/: ExtendedNPETests.java
test/test_files/fannkuch_multithreaded/: LICENSE  fannkuchredux.java
test/test_files/field_initialization_order/: Main.java  MyStuff.java
test/test_files/filesystem/: Filesystem.java
test/test_files/frem_drem/: FremDremTest.java
test/test_files/generic_types/: GenericBox.java
test/test_files/get_declared_classes/: GetDeclaredClasses.java
test/test_files/gson/: GsonExample.java
test/test_files/illegal_monitor/: IllegalMonitors.java
test/test_files/indy_1/: Main.java
test/test_files/intact_jar/: Main.java
test/test_files/interning/: Main.java
test/test_files/java_util_concurrent/: ReentrantLockTest.java
test/test_files/json/: GsonExample.java
test/test_files/kotlin_says_hi/: Hello.kt
test/test_files/long_calls/: Main.java
test/test_files/manually_thrown/: ManuallyThrown.java
test/test_files/match_exception/: MatchException.java
test/test_files/math/: Main.java
test/test_files/method_parameters/: MethodParameters.java
test/test_files/n_body_problem/: NBodyProblem.java
test/test_files/name_of_array_class/: NameOfArrayClass.java
test/test_files/negative_array_size/: Main.java
test/test_files/new_instance/: Main.java
test/test_files/npe/: Main.java
test/test_files/null_getfield_putfield/: Main.java
test/test_files/numerics/: Main.java
test/test_files/nutty_interface_inheritance/: NuttyInterfaceInheritance.java
test/test_files/out_of_memory/: Main.java
test/test_files/park_unpark/: CollatzConjecture.java  FIFOMutex.java  Main.java  desired_output.txt
test/test_files/pdf/: PDFDemo.java
test/test_files/permitted_subclasses/: PermittedSubclasses.java
test/test_files/playground/: Main.java
test/test_files/printf/: Printf.java
test/test_files/random/: RandomTest.java
test/test_files/random_uuid/: Main.java
test/test_files/records/: Records.java
test/test_files/reentrant_monitor/: Main.java  ReentrantFactorialCalculator.java
test/test_files/reflect_method/: Main.java
test/test_files/reflection/: Main.java
test/test_files/reflection_class/: Main.java
test/test_files/reflection_method/: ReflectionMethod.java
test/test_files/scuffed_inner_classes/: Testing.java
test/test_files/signature_polymorphism/: .Main.java.swn  .Main.java.swo  Main.java
test/test_files/simple/: README.md
test/test_files/single_thread_interrupt/: Main.java
test/test_files/sleep_interruption/: Main.java
test/test_files/stack_overflow/: StackOverflow.java
test/test_files/sudoku/: Board.java  Main.java  Solver.java  UnsafeWorkerThreadSudoku.java  WorkerThreadSudoku.java  sudoku.txt
test/test_files/synchronized_counter/: Main.java  SynchronizedCountdownLatch.java  SynchronizedCounter.java  TestSynchronizedCountdown.java
test/test_files/system_input/: Main.java
test/test_files/the_algorithms/: README.md
test/test_files/tricky_gc/: AttemptGcCrash.java
test/test_files/url-classloader/: DynamicallyLoaded.java  LoaderTest.java
test/test_files/var_handles/: Main.java
test/test_files/weak_references/: WeakReferences.java
vm/: CMakeLists.txt  adt.c  adt.h  analysis.c  analysis.h  arrays.c  arrays.h  async.h  bjvm.c  bjvm.h  cached_classdescs.h  classfile.c  classfile.h  classloader.c  classloader.h  classpath.c  classpath.h  config.h.in  debugger.c  debugger.h  dumb_jit.c  dumb_jit.h  endian.h  exceptions.c  exceptions.h  extended_npe_message.c  gc.c  gc.h  instrumentation.h  interpreter2-notco.inc  interpreter2.c  ir.h  jit_allocator.c  jit_allocator.h  linkage.c  linkage.h  modules.h  monitors.c  monitors.h  natives-dsl.h  (+21 more)
vm/wasm/: wasm_utils.c  wasm_utils.h
(+233 files in other folders)
